--- a/style.css
+++ b/style.css
@@ -1,1 +1,17 @@
+#MPG
+{
+  font-size: Medium;
+  color: #00D537
+}
 
+#Year
+{
+  font-size: Medium;
+  color: #2E2EC8
+}
+
+#Transmission
+{
+  font-size: Medium;
+  color: #DA0000
+}
