--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 #MPG
 {
-  font-size: Medium;
+  font-size: Large;
   color: #00D537
 }
 
 #Year
 {
-  font-size: Medium;
+  font-size: Large;
   color: #2E2EC8
 }
 
 #Transmission
 {
-  font-size: Medium;
+  font-size: Large;
   color: #DA0000
 }
