--- a/style.css
+++ b/style.css
@@ -20,3 +20,18 @@
 {
   font-size: Small;
 }
+
+#Img-1-Credit
+{
+  font-size: Small;
+}
+
+#Img-2-Credit
+{
+  font-size: Small;
+}
+
+#Img-3-Credit
+{
+  font-size: Small;
+}
